# shar-pi

./: Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs
src/clients/: mod.rs  openai.rs
src/core/: history.rs  mod.rs
src/models/: claude.rs  mod.rs
