[package]
name = "ai_agent"
version = "0.1.0"
edition = "2021"
description = "AI agent with Anthropic Sonnet support and terminal integration"
authors = ["Your Name <your.email@example.com>"]
rust-version = "1.80.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
ureq = "2.9.1"

[[bin]]
name = "ai-agent"
path = "src/bin/main.rs"

[lib]
name = "ai_agent"
path = "src/lib.rs"
