[package]
name = "sharpi"
version = "0.1.0"
edition = "2021"
description = "SharPi - An AI coding assistant"
authors = ["SharPi Contributors"]
license = "MIT"
rust-version = "1.80.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
ureq = "2.9.1"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
serde_json = "1.0"

[[bin]]
name = "spi"
path = "src/bin/main.rs"

[lib]
name = "sharpi"
path = "src/lib.rs"
